--- a/theme.css
+++ b/theme.css
@@ -20,8 +20,46 @@ nav {
   padding: 0;
 }
 
+div {
+  id: "menu"
+  width:500px;
+  height:35px;
+  font-size: 16px;
+  font-family: sans-serif;
+  font-weight: bold;
+  text-align: center;
+  background-color: #fff;
+  border radius: 8px;
+}
+
 img {
   id: "DJ"
   width:350px;
   height:500px;
+}
+
+ul {
+  id: "menu"
+  height: auto;
+  padding: 8px 0px;
+  margin: 0px;
+}
+
+li {
+  id: "menu"
+  display: horizontal;
+  padding: 20px;
+}
+
+a {
+  id: "menu"
+  text-decoration: none;
+  color: #00F;
+  padding: 8px 8px 8px 8px;
+}
+
+a:hover {
+  id: "menu"
+  color: #f90;
+  background-color: black;
 }
