--- a/theme.css
+++ b/theme.css
@@ -1,64 +1,82 @@
 body {
   background-color:#d3d3d3;
-  font-family: sans;
+  font-family: sans-serif;
   margin:auto;
   width:100%;
+  text-align: center;
 }
 
 h1 {
   font-style: normal;
+  text-align: center;
+}
+
+h2 {
+  text-align: center;
+  font-size: 2em;
 }
 
 footer {
   font-style: normal;
 }
 
-nav {
-  font-style: normal;
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
 #menu div {
-  width:500px;
+  width: auto;
   height:35px;
   font-size: 16px;
   font-family: sans-serif;
-  font-weight: bold;
+  font-weight: normal;
   text-align: center;
-  background-color: #fff;
-  border radius: 8px;
 }
 
-img {
-  id: "DJ"
-  width:350px;
-  height:500px;
+#DJ img {
+  width: 35%;
+  height: 35%;
+  padding: 10px;
 }
 
-ul {
-  id: "menu"
+
+#menu ul {
   height: auto;
   padding: 8px 0px;
   margin: 0px;
 }
 
-li {
-  id: "menu"
-  display: horizontal;
+#menu li {
+  display: inline;
   padding: 20px;
 }
 
-a {
-  id: "menu"
+#menu a {
   text-decoration: none;
-  color: #00F;
+  color: black;
   padding: 8px 8px 8px 8px;
 }
 
-a:hover {
-  id: "menu"
+#menu a:hover {
   color: #f90;
   background-color: black;
+}
+
+#bio p {
+  padding: 30px;
+  width: 800px;
+  text-align: center;
+  font-weight: normal;
+  margin-left: auto;
+  margin-right: auto;
+  line-height: 22px
+}
+
+#footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 50px;
+}
+
+table {
+  height: 80%;
+  width: 80%;
+  
 }
