--- a/theme.css
+++ b/theme.css
@@ -77,6 +77,12 @@ footer {
 
 table {
   height: 80%;
-  width: 80%;
-  
+  width: auto;
+  border-style: solid;
+  border-radius: 10px;
+  text-align: left;
+}
+
+#contact div {
+  text-align: center;
 }
