--- a/theme.css
+++ b/theme.css
@@ -4,6 +4,7 @@ body {
   margin:auto;
   width:100%;
   text-align: center;
+  padding: 30px;
 }
 
 h1 {
@@ -76,13 +77,43 @@ footer {
 }
 
 table {
-  height: 80%;
-  width: auto;
-  border-style: solid;
+  border-collapse: collapse;
+  margin-top: 30px;
+  border-color: white;
+  background-color: white;
   border-radius: 10px;
+  padding: 10px;
+  width:auto;
+  height:80%;
   text-align: left;
 }
 
-#contact div {
+#projects ul {
+  height: auto;
+  padding: 0px 0px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: white;
+  width: 300px;
   text-align: center;
+}
+
+#projects li {
+  display: block;
+  padding: 10px;
+  border: 2px;
+  border-style:solid;
+  border-color:black;
+}
+
+#projects a {
+  color: black;
+  text-decoration: none;
+}
+
+img {
+  margin-top:30px;
+  margin-bottom:30px;
+  margin-left:auto;
+  margin-right:auto;
 }
