--- a/theme.css
+++ b/theme.css
@@ -61,7 +61,7 @@ footer {
 
 #bio p {
   padding: 30px;
-  width: 800px;
+  width: 80%;
   text-align: center;
   font-weight: normal;
   margin-left: auto;
