--- a/theme.css
+++ b/theme.css
@@ -10,6 +10,10 @@ body {
 h1 {
   font-style: normal;
   text-align: center;
+  border: solid;
+  width: 50%;
+  display: inline;
+  padding: 4px 4px 4px 4px;
 }
 
 h2 {
@@ -21,13 +25,11 @@ footer {
   font-style: normal;
 }
 
-#menu div {
-  width: auto;
-  height:35px;
-  font-size: 16px;
-  font-family: sans-serif;
-  font-weight: normal;
-  text-align: center;
+img {
+  margin-top:30px;
+  margin-bottom:30px;
+  margin-left:auto;
+  margin-right:auto;
 }
 
 #DJ img {
@@ -36,6 +38,15 @@ footer {
   padding: 10px;
 }
 
+#menu {
+  width: auto;
+  height:35px;
+  font-size: 16px;
+  font-family: sans-serif;
+  font-weight: normal;
+  text-align: center;
+  margin-top: 1%;
+}
 
 #menu ul {
   height: auto;
@@ -71,9 +82,10 @@ footer {
 
 #footer {
   position: absolute;
-  bottom: 0;
+  bottom: 0px;
   width: 100%;
   height: 15px;
+  margin-top: 10%;
 }
 
 table {
@@ -86,6 +98,8 @@ table {
   width:auto;
   height:80%;
   text-align: left;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 #projects ul {
@@ -111,9 +125,8 @@ table {
   text-decoration: none;
 }
 
-img {
-  margin-top:30px;
-  margin-bottom:30px;
-  margin-left:auto;
-  margin-right:auto;
+#projects a:hover {
+  color: #f90;
+  background-color: black;
+  display: block;
 }
