--- a/theme.css
+++ b/theme.css
@@ -1,6 +1,6 @@
 body {
-  background-color:#d3d3d3;
-  font-family: sans-serif;
+  background-color: #D3d3d3;
+  font-family: monospace;
   margin:auto;
   width:100%;
   text-align: center;
@@ -22,11 +22,14 @@ h1 {
   width: 50%;
   display: inline;
   padding: 4px 4px 4px 4px;
+  color: #4C4238;
 }
 
 h2 {
   text-align: center;
   font-size: 2em;
+  color: #ABA197;
+  font-family: monospace;
 }
 
 footer {
@@ -69,13 +72,13 @@ img {
 
 #menu a {
   text-decoration: none;
-  color: black;
+  color: white;
   padding: 8px 8px 8px 8px;
 }
 
 #menu a:hover {
-  color: #f90;
-  background-color: black;
+  color: black;
+  background-color: #AFC6D2;
 }
 
 #bio p {
@@ -88,12 +91,22 @@ img {
   line-height: 22px
 }
 
+header {
+  margin-bottom:20px;
+  background-color: #4C4238;
+  height: 35px;
+  width: 100%;
+  color: white;
+}
+
 #footer {
   position: absolute;
   bottom: 0px;
   width: 100%;
-  height: 15px;
+  height: 40px;
   margin-top: 10%;
+  background-color: #4C4238;
+  color: white;
 }
 
 table {
@@ -149,8 +162,11 @@ table {
 }
 
 #projects a:hover {
-  color: #f90;
-  background-color: black;
+  color: white;
+  background-color: #AFC6D2;
   display: block;
 }
 
+#projects {
+  font-size: 20px;
+}
