--- a/theme.css
+++ b/theme.css
@@ -44,8 +44,9 @@ img {
 }
 
 #DJ img {
-  width: 20%;
-  height: 20%;
+  width: 30%;
+  max-width: 300px;
+  height: auto;
   padding: 10px;
 }
 
@@ -88,7 +89,8 @@ img {
   font-weight: normal;
   margin-left: auto;
   margin-right: auto;
-  line-height: 22px
+  line-height: 22px;
+  font-size: 18px;
 }
 
 header {
@@ -141,8 +143,7 @@ table {
 #projects ul {
   height: auto;
   padding: 0px 0px;
-  margin-left: auto;
-  margin-right: auto;
+  margin: auto;
   background-color: white;
   width: 300px;
   text-align: center;
