--- a/theme.css
+++ b/theme.css
@@ -1,10 +1,11 @@
+
+
 body {
   background-color: #D3d3d3;
   font-family: monospace;
   margin:auto;
   width:100%;
   text-align: center;
-  padding: 30px;
 }
 
 #MC {
@@ -112,27 +113,30 @@ header {
 }
 
 .contact {
-  text-decoration: none;
-  border-color: white;
   background-color: white;
   border-radius: 10px;
   width:auto;
-  max-width:50%;
-  height:80%;
+  max-width:45%;
+  height:auto;
   text-align: left;
   margin-left: auto;
   margin-right: auto;
+  font-size: 16px;
 }
 
 .contact ul {
   list-style-type: none;
+  display: inline;
 }
 
-span {
-  font-weight: bold;
+.cd ul {
+  font-weight: 700;
   padding: 5px;
+  display: inline;
   
 }
+
+
 
 #RSC {
   width: 80%;
@@ -180,4 +184,25 @@ span {
 
 #projects {
   font-size: 20px;
+}
+
+.Table {
+        display: table;
+        margin-left: auto;
+        margin-right: auto;
+}
+
+.Row {
+        display: table-row;
+}
+
+.Cell {
+        display: table-cell;
+        padding-left: 5px;
+        padding-right: 5px;
+        text-align: left;
+}
+
+#ftext {
+  padding: 10px;
 }
