--- a/theme.css
+++ b/theme.css
@@ -112,12 +112,13 @@ header {
   background-color: white;
   border-radius: 10px;
   width:auto;
-  max-width:45%;
+  max-width:40%;
   height:auto;
   text-align: left;
   margin-left: auto;
   margin-right: auto;
   font-size: 16px;
+  overflow: hidden;
 }
 
 .contact ul {
