--- a/theme.css
+++ b/theme.css
@@ -113,12 +113,12 @@ header {
   border-radius: 10px;
   width:auto;
   max-width:40%;
+  min-width: 310px;
   height:auto;
   text-align: left;
   margin-left: auto;
   margin-right: auto;
   font-size: 16px;
-  overflow: hidden;
 }
 
 .contact ul {
